--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
   <h2>Activity Links</h2>
   <a href="guess_word_game.html">1. Guess the Secret Word Game</a>
   <a href="browser_dashboard.html">2. Browser Environment Dashboard</a>
+  <a href="dom_traversal.html">2. Interactive DOM Traversal and Manipulation</a>
 </body>
 </html>
