--- a/index2.html
+++ b/index2.html
@@ -8,16 +8,16 @@
 <body>
   <header>
     <h2>Interactive Canvas: Create, Move, Resize, Delete Circles</h2>
-    <p>
-      Complete Name: Stephanie Jane Cea<br>
-      Sex: Female<br>
-      Address: Matacla, Goa, Camarines Sur<br>
-      Course, Year, and Section: BSIT-2A<br>
-      Name of School: Partido State University<br>
-      Semester and Academic Year: 2nd Sem, AY 2024–2025<br>
-      Subject Code and Title: PF2 - Event-Driven Programming<br>
-      Name of Subject Instructor: Arjay F. Abio
-    </p>
+    <div class="profile">
+    <p><strong>Complete Name:</strong> Stephanie Jane B. Cea</p>
+    <p><strong>Sex:</strong> Female </p>
+    <p><strong>Address:</strong> Zone 5, Matacla, Goa, Camarines Sur </p>
+    <p><strong>Course:</strong> BSIT, 2nd Year, Section A</p>
+    <p><strong>School:</strong> Partido State University </p>
+    <p><strong>Semester:</strong> 2nd Semester, AY 2024–2025</p>
+    <p><strong>Subject:</strong> PF2 - Event-Driven Programming</p>
+    <p><strong>Instructor:</strong> Arjay F. Abio </p>
+    </div>
   </header>
   
   <main>
