--- a/browser_dashboard.html
+++ b/browser_dashboard.html
@@ -61,7 +61,7 @@
     <p><strong>School:</strong> Partido State University </p>
     <p><strong>Semester:</strong> 2nd Semester, AY 2024–2025</p>
     <p><strong>Subject:</strong> PF2 - Event-Driven Programming</p>
-    <p><strong>Instructor:</strong> Arjay F. Abio </p>
+    <p><strong>Instructor:</strong> Mr. Arjay F. Abio </p>
   </header>
 
   <section>
