--- a/dom_traversal.html
+++ b/dom_traversal.html
@@ -42,12 +42,12 @@
     <h2>DOM Traversal Interactive</h2>
     <p><strong>Name:</strong> Stephanie Jane Cea</p>
     <p><strong>Sex:</strong> Female</p>
-    <p><strong>Address:</strong> Matacla, Goa, Camarines Sur</p>
+    <p><strong>Address:</strong> Zone 5, Matacla, Goa, Camarines Sur</p>
     <p><strong>Course:</strong> BSIT-2</p>
     <p><strong>School:</strong> Partido State University</p>
     <p><strong>Semester/AY:</strong> 2nd Sem, AY 2024-2025</p>
     <p><strong>Subject:</strong> PF2 - Event-Driven Programming</p>
-    <p><strong>Instructor:</strong> Mr. Arjay Abio</p>
+    <p><strong>Instructor:</strong> Mr. Arjay F. Abio</p>
   </header>
 
   <div id="grandparent" class="grandparent">Grandparent
