--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
     <p><strong>School:</strong> Partido State University </p>
     <p><strong>Semester:</strong> 2nd Semester, AY 2024–2025</p>
     <p><strong>Subject:</strong> PF2 - Event-Driven Programming</p>
-    <p><strong>Instructor:</strong> Arjay F. Abio </p>
+    <p><strong>Instructor:</strong> Mr. Arjay F. Abio </p>
   </div>
 
   <h2>Activity Links</h2>
   <a href="guess_word_game.html">1. Guess the Secret Word Game</a>
   <a href="browser_dashboard.html">2. Browser Environment Dashboard</a>
   <a href="dom_traversal.html">3. Interactive DOM Traversal and Manipulation</a>
-  <a href="index2.html">4. Interactive DOM Traversal and Manipulation</a>
+  <a href="index2.html">4. Interactive Canvas Shape Editor</a>
   
 </body>
 </html>
